Fix product images on iOS

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,28 +48,22 @@ ul.product--units li:nth-child(even):before {
   left: 0;
 }
 
-.product--image {
+.product--image, .product--abbreviation {
   width: 40px;
   height: 40px;
-  max-width: 40px;
   position: sticky;
   border: 1px solid gray;
   padding: 1px;
-  font-size: 80%;
 }
 
-[data-initials]:before {
+.product--abbreviation {
+  font-size: 80%;
   background: #fff;
   color: black;
   opacity: 1;
-  content: attr(data-initials);
   display: inline-block;
   font-weight: bold;
   vertical-align: middle;
-  margin-right: 0.5em;
-  width: 40px;
-  height: 40px;
   line-height: 40px;
   text-align: center;
-  position: absolute;
 }
